--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "@unocss/reset/tailwind.css";
+@unocss all;
+
+:root,
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+}
